Bug 40617 - [4.5 Regression] Revision 149170 breaks bootstrap
Summary: [4.5 Regression] Revision 149170 breaks bootstrap
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: bootstrap (show other bugs)
Version: 4.5.0
: P3 normal
Target Milestone: 4.5.0
Assignee: Richard Biener
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2009-07-02 13:28 UTC by H.J. Lu
Modified: 2009-07-03 09:57 UTC (History)
2 users (show)

See Also:
Host:
Target:
Build:
Known to work:
Known to fail:
Last reconfirmed: 2009-07-02 15:01:18


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description H.J. Lu 2009-07-02 13:28:55 UTC
Revision 149170:

http://gcc.gnu.org/ml/gcc-cvs/2009-07/msg00046.html

breaks bootstrap on Linux/ia32:

/export/gnu/import/svn/gcc-test/bld/./prev-gcc/xgcc -B/export/gnu/import/svn/gcc-test/bld/./prev-gcc/ -B/usr/local/i686-pc-linux-gnu/bin/ -B/usr/local/i686-pc-linux-gnu/bin/ -B/usr/local/i686-pc-linux-gnu/lib/ -isystem /usr/local/i686-pc-linux-gnu/include -isystem /usr/local/i686-pc-linux-gnu/sys-include    -c -g -O2 -fomit-frame-pointer -DIN_GCC -W -Wall -Wwrite-strings -Wcast-qual -Wstrict-prototypes -Wmissing-prototypes -Wold-style-definition -Wc++-compat -fno-common -DHAVE_CONFIG_H -DGENERATOR_FILE -I. -Ibuild -I../../src-trunk/gcc -I../../src-trunk/gcc/build -I../../src-trunk/gcc/../include -I../../src-trunk/gcc/../libcpp/include  -I../../src-trunk/gcc/../libdecnumber -I../../src-trunk/gcc/../libdecnumber/bid -I../libdecnumber    \
                -o build/gencheck.o ../../src-trunk/gcc/gencheck.c
build/genmodes > tmp-modes.c
/bin/sh: line 1: 23689 Segmentation fault      build/genmodes > tmp-modes.c
make[6]: *** [s-modes] Error 139
make[6]: *** Waiting for unfinished jobs....
rm gcj-dbtool.pod fsf-funding.pod jcf-dump.pod jv-convert.pod grmic.pod gcov.pod gcj.pod gc-analyze.pod gfdl.pod cpp.pod gij.pod gcc.pod gfortran.pod
make[6]: Leaving directory `/export/gnu/import/svn/gcc-test/bld/gcc'
make[5]: *** [all-stage2-gcc] Error 2
make[5]: Leaving directory `/export/gnu/import/svn/gcc-test/bld'
make[4]: *** [stage2-bubble] Error 2
Comment 1 Richard Biener 2009-07-02 13:46:34 UTC
For 4.5 you mean?
Comment 2 H.J. Lu 2009-07-02 13:51:38 UTC
(In reply to comment #1)
> For 4.5 you mean?
> 

Yes. Only on Linux/ia32. Linux/x86-64 passed that failure
point.
Comment 3 Richard Biener 2009-07-02 13:56:48 UTC
Ok, I'm trying to reproduce and get genmodes.i.
Comment 4 Richard Biener 2009-07-02 14:16:16 UTC
Hm, I'm into stage2 and genmodes was already built and executed fine - so,
I don't seem to be able to reproduce it right now.

How did you configure?  I did

/space/rguenther/tramp3d/trunk/configure --enable-languages=c --disable-nls --with-build-time-tools=/abuild/rguenther/tools32/usr/bin

which configures for i686-pc-linux-gnu for me.
Comment 5 Richard Biener 2009-07-02 14:24:24 UTC
Thus, please somebody attach genmodes.i that is miscompiled.
Comment 6 Richard Biener 2009-07-02 14:31:14 UTC
Ok, I see it with stage3 only :(

build/genmodes > tmp-modes.c
/bin/sh: line 1: 16996 Segmentation fault      build/genmodes > tmp-modes.c
make[3]: *** [s-modes] Error 139
make[3]: *** Waiting for unfinished jobs....
rm fsf-funding.pod gcov.pod gfdl.pod cpp.pod gcc.pod
make[3]: Leaving directory `/abuild/rguenther/obj-32/gcc'
make[2]: *** [all-stage3-gcc] Error 2
make[2]: Leaving directory `/abuild/rguenther/obj-32'
make[1]: *** [stage3-bubble] Error 2
make[1]: Leaving directory `/abuild/rguenther/obj-32'
make: *** [all] Error 2
Comment 7 H.J. Lu 2009-07-02 14:36:27 UTC
(In reply to comment #6)
> Ok, I see it with stage3 only :(
> 
> build/genmodes > tmp-modes.c
> /bin/sh: line 1: 16996 Segmentation fault      build/genmodes > tmp-modes.c
> make[3]: *** [s-modes] Error 139
> make[3]: *** Waiting for unfinished jobs....
> rm fsf-funding.pod gcov.pod gfdl.pod cpp.pod gcc.pod
> make[3]: Leaving directory `/abuild/rguenther/obj-32/gcc'
> make[2]: *** [all-stage3-gcc] Error 2
> make[2]: Leaving directory `/abuild/rguenther/obj-32'
> make[1]: *** [stage3-bubble] Error 2
> make[1]: Leaving directory `/abuild/rguenther/obj-32'
> make: *** [all] Error 2
> 

Configuring gcc with

../src-trunk/configure --enable-clocale=gnu --with-system-zlib --enable-shared --with-demangler-in-ld

may see it in stage2.

Comment 8 Richard Biener 2009-07-02 14:55:27 UTC
Hmm, building genmodes.o with -save-temps makes the segfault go away...
Comment 9 Richard Biener 2009-07-02 15:01:18 UTC
Ok, i have an idea.
Comment 10 Richard Biener 2009-07-02 15:50:55 UTC
Subject: Bug 40617

Author: rguenth
Date: Thu Jul  2 15:50:26 2009
New Revision: 149179

URL: http://gcc.gnu.org/viewcvs?root=gcc&view=rev&rev=149179
Log:
2009-07-02  Richard Guenther  <rguenther@suse.de>

	PR bootstrap/40617
	* tree-ssa-structalias.c (new_var_info): Initialize
	is_restrict_var.

Modified:
    trunk/gcc/ChangeLog
    trunk/gcc/tree-ssa-structalias.c

Comment 11 Richard Biener 2009-07-03 09:57:27 UTC
Fixed I suppose.