2009-07-02  Richard Guenther  <rguenther@suse.de>

PR bootstrap/40617
	* tree-ssa-structalias.c (new_var_info): Initialize
	is_restrict_var.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@149179 138bc75d-0d04-0410-961f-82ee72b054a4